--- a/z-fuel-frontend/src/components/findFuel/NavBar.module.css
+++ b/z-fuel-frontend/src/components/findFuel/NavBar.module.css
@@ -13,7 +13,7 @@
 .leftSide {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 50px;
 }
 
 .rightSide {
@@ -24,10 +24,11 @@
 
 .logo img {
   height: 40px;
+  margin-left: 35px;
 }
 
 .navButtonLeft {
-  background-color: #f57c00;
+  background-color: #f36f21;
   color: #fff;
   padding: 8px 15px;
   border-radius: 10px;
@@ -66,6 +67,9 @@
 
 .navButtonRight {
   background-image: url(/images/purpleGradient.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
   color: #fff;
   padding: 8px 15px;
   border-radius: 10px;
