--- a/z-fuel-frontend/src/common/header/Header.module.css
+++ b/z-fuel-frontend/src/common/header/Header.module.css
@@ -17,9 +17,24 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  max-height: 40px;
-  max-width: 40px;
+  max-height: 50px;
+  max-width: 50px;
   margin-inline: 30px;
+}
+
+.forPersonalBtn {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: center;
+
+  padding: 10px 20px;
+  border: none;
+  border-radius: 12px;
+
+  background-color: #f36f21;
+  color: white;
+  font-weight: 600;
 }
 
 .logoImg {
