--- a/z-fuel-frontend/src/layouts/baselayout/BaseLayout.module.css
+++ b/z-fuel-frontend/src/layouts/baselayout/BaseLayout.module.css
@@ -9,6 +9,8 @@
   display: flex;
   flex: 1;
   height: auto;
+  background-color: rgb(238, 208, 151);
+  /* background is orange just for testing */
 }
 
 .contentArea {
