--- a/z-fuel-frontend/src/components/findFuel/ZMap.module.css
+++ b/z-fuel-frontend/src/components/findFuel/ZMap.module.css
@@ -5,9 +5,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #f8f8f8;
+  padding-left: 1.5rem;
 }
 
-.leftContainer{
+.leftContainer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
