--- a/z-fuel-frontend/src/components/navlinks/NavLinks.module.css
+++ b/z-fuel-frontend/src/components/navlinks/NavLinks.module.css
@@ -79,13 +79,15 @@
 }
 
 .dropdownmenu {
+  margin-left: 10px;
   position: absolute;
   z-index: 1;
   min-width: 180px;
-  margin-top: 2px;
   box-sizing: border-box;
   background-color: white;
   box-shadow: 0px 8px 16px 0px rgba(161, 148, 247, 0.2);
+  border-top: 2px solid orange;
+  font-size: 14px;
 }
 
 .rightSection .navlink {
@@ -111,11 +113,15 @@
 }
 
 .dropdownmenu a:hover {
-  background-color: #ebf9fd;
+  background-color: #fdebeb;
 }
 
 .dropdownContainer .icon {
   margin-inline: 8px;
+}
+
+.dropdownContainer p {
+  font-weight: 500;
 }
 
 /* ---------------------------------------------- */
