added cursor pointer on hover over buttons and navlinks

--- a/z-fuel-frontend/src/components/navlinks/NavLinks.module.css
+++ b/z-fuel-frontend/src/components/navlinks/NavLinks.module.css
@@ -69,8 +69,17 @@
   color: black;
 }
 
+.headerlinkscontainer.navlink,
+.navbarlinksContainer .navlink:hover {
+  cursor: pointer;
+}
+
 .navbarlinksContainer .icon {
   margin-inline: 15px;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 /* ------------------------------------------------ */
