--- a/z-fuel-frontend/src/components/findFuel/StationCard.module.css
+++ b/z-fuel-frontend/src/components/findFuel/StationCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 1rem;
   border-radius: 18px;
-  background-image: url("/images/orangeGradient.png");
+  background-image: url("/images/gradients/orangeGradient.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
