--- a/z-fuel-frontend/src/components/findFuel/StationCard.module.css
+++ b/z-fuel-frontend/src/components/findFuel/StationCard.module.css
@@ -11,13 +11,12 @@
   overflow: hidden;
   color: #ffffff;
   font-family: "Roboto", sans-serif;
-  height: 250px;
+  height: 230px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border: 5px solid rgba(255, 255, 255, 0);
   width: 100%;
-
+  max-width: 400px;
 }
-
 
 .stationName {
   font-size: 1.5rem;
@@ -30,15 +29,21 @@
   margin-bottom: 1rem;
 }
 
+.title {
+  font-size: 0.8rem;
+  font-weight: 450;
+}
+
 .description {
   display: flex;
-  justify-content: space-between;
+  gap: 40px;
 }
 
 .leftSide {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 33.33%;
 }
 
 .contactInfo {
@@ -62,6 +67,7 @@
   font-size: 0.8rem;
   color: white; /* Matches the white text in the image */
   font-family: Roboto, sans-serif; /* Matches the font in the image */
+  line-height: 1;
 }
 
 .hourRow {
