--- a/z-fuel-frontend/src/components/findFuel/ZMap.module.css
+++ b/z-fuel-frontend/src/components/findFuel/ZMap.module.css
@@ -11,13 +11,18 @@
   margin: 2.2rem 0;
 }
 
+.layoutContainer {
+  display: flex;
+  gap: 2rem;
+}
+
 .leftContainer {
   display: flex;
   flex-direction: column;
   gap: 20px;
   align-items: flex-start; /* Align children to the left */
   width: 33.3%;
-  height: 100%;
+  height: 90%;
   margin: 3rem 0;
 }
 
@@ -25,6 +30,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  height: 100%;
 }
 
 /* if no station cards match, show message */
