--- a/z-fuel-frontend/src/components/findFuel/SearchBar.module.css
+++ b/z-fuel-frontend/src/components/findFuel/SearchBar.module.css
@@ -26,3 +26,14 @@
   font-size: 16px;
   color: #333;
 }
+
+@media (max-width: 768px) {
+  .searchContainer {
+    max-width: 90%; /* Make the search bar take more space on mobile */
+    margin: 0 auto;
+  }
+
+  .input {
+    font-size: 14px;
+  }
+}
