--- a/z-fuel-frontend/src/components/findFuel/ZMap.module.css
+++ b/z-fuel-frontend/src/components/findFuel/ZMap.module.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  align-items: flex-start; /* Align children to the left */
+  align-items: flex-start;
   width: 33.3%;
   height: 90%;
   margin: 3rem 0;
@@ -34,10 +34,32 @@
 }
 
 /* if no station cards match, show message */
-.noResultsMsg{
+.noResultsMsg {
   font-family: Roboto;
   color: #6c6c6c;
   font-size: 17px;
   font-weight: 600;
   line-height: 24px;
+}
+
+@media (max-width: 768px) {
+  .mapContainer {
+    height: 300px;
+    width: 100%;
+  }
+
+  .layoutContainer {
+    flex-direction: column-reverse;
+  }
+
+  .leftContainer {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container {
+    padding: 0%;
+    width: 100%;
+  }
 }
