--- a/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
+++ b/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
@@ -99,7 +99,7 @@
   border-radius: 30px;
   padding: 20px;
   color: #1e196b;
-  box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
 
   background-color: #dedada;
 }
@@ -119,8 +119,38 @@
   /* background-color: aliceblue; */
 }
 
-.categoryImage {
+.categoryImage,
+.productImage {
   width: 100%;
   height: 100%;
   /* overflow: hidden; */
+}
+
+/* -------------------------- section 3 ------------------------------ */
+
+.productsContainer {
+  padding: 20px 70px;
+  /* background-color: pink; */
+}
+
+.productsList {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 40px;
+  padding: 60px;
+}
+
+.productCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 200px;
+  height: 200px;
+  border-radius: 30px;
+  padding: 20px;
+  color: #1e196b;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+
+  background-color: #dedada;
 }
