implemented responsive design - mobile

--- a/z-fuel-frontend/src/common/navbar/Navbar.module.css
+++ b/z-fuel-frontend/src/common/navbar/Navbar.module.css
@@ -22,3 +22,10 @@
   color: white;
   margin-top: auto;
 }
+
+/* For screens <= 950px, hide the links by default */
+@media (max-width: 950px) {
+  .navbarContainer {
+    z-index: 0;
+  }
+}
