--- a/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
+++ b/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
@@ -65,18 +65,24 @@
 }
 
 .priceCard {
-  background-color: white;
+  width: 209px;
+  height: 209px;
+  background-image: url('/images/priceComp/fuelTypeBGGradient.png');
+  background-size: cover;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .fuelIcon {
-  width: 5rem;
-  height: 5rem;
+  width: 44px;
+  height: 19px;
+  margin: 5px;
+  border-radius: 15px;
   object-fit: contain;
 }
 
