--- a/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
+++ b/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
@@ -72,7 +72,7 @@
   gap: 30px;
   padding: 40px 70px;
   width: 100vw;
-  height: 450px;
+  height: auto;
 }
 
 .categoriesContainer {
@@ -126,9 +126,11 @@
   /* overflow: hidden; */
 }
 
-/* -------------------------- section 3 ------------------------------ */
+/* -------------------------- section 3 - Products ------------------------------ */
 
 .productsContainer {
+  display: flex;
+  flex-direction: column;
   padding: 20px 70px;
   /* background-color: pink; */
 }
@@ -153,4 +155,107 @@
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
 
   background-color: #dedada;
+}
+
+/* ------------------------------------------------------------------- */
+
+/* For screens <= 950px, hide the links by default */
+@media (max-width: 1245px) {
+  .categoryCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+    padding: 20px;
+    color: #1e196b;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+
+    background-color: #dedada;
+  }
+}
+
+@media (max-width: 1020px) {
+  .categoryCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 180px;
+    height: 180px;
+    border-radius: 30px;
+    padding: 20px;
+    color: #1e196b;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+
+    background-color: #dedada;
+  }
+}
+
+/* For screens <= 950px, hide the links by default */
+@media (max-width: 950px) {
+  .informationContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 40px 10px;
+
+    /* background-color: black; */
+  }
+
+  .orderOnlineDefaultImg {
+    display: none;
+  }
+
+  .categoriesContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    gap: 20px;
+    /* padding-inline: 30px; */
+
+    /* background-color: black; */
+  }
+
+  .categoryCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+    padding: 20px;
+    color: #1e196b;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+
+    background-color: #dedada;
+  }
+
+  .productsContainer {
+    padding: 0;
+    /* background-color: pink; */
+  }
+
+  .titles {
+    padding-inline: 40px;
+  }
+
+  .orderContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
+    gap: 30px;
+    padding: 40px 30px;
+    width: 100vw;
+    height: auto;
+  }
 }
