--- a/z-fuel-frontend/src/components/findFuel/ZMap.module.css
+++ b/z-fuel-frontend/src/components/findFuel/ZMap.module.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   gap: 20px;
   align-items: flex-start;
-  width: 33.3%;
+  width: 400px;
   height: 90%;
   margin: 3rem 0;
 }
@@ -62,4 +62,9 @@
     padding: 0%;
     width: 100%;
   }
+
+  .noResultsMsg {
+    color: white;
+  }
+
 }
