--- a/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
+++ b/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
@@ -17,6 +17,7 @@
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.15;
+  background-image: url('/images/priceComp/doodleBackground.png');
   background-size: cover;
   transform: scale(1.2);
 }
@@ -27,7 +28,6 @@
 }
 
 .comparisonSection h2 {
-  position: static;
   margin-top: 60px;
   font-size: 1.5rem;
   margin-left: 60px;
@@ -35,17 +35,15 @@
 }
 
 .contentContainer {
-  width: 100%;
-  max-width: none;
-  margin: 0;
-  padding: 0;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
 .locationSection {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
 }
 
 .searchBarContainer {
