--- a/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
+++ b/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
@@ -17,7 +17,6 @@
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.15;
-  background-image: url('/images/priceComp/doodleBackground.png');
   background-size: cover;
   transform: scale(1.2);
 }
@@ -28,6 +27,7 @@
 }
 
 .comparisonSection h2 {
+  position: static;
   margin-top: 60px;
   font-size: 1.5rem;
   margin-left: 60px;
@@ -35,15 +35,17 @@
 }
 
 .contentContainer {
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  padding: 0;
 }
 
 .locationSection {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 40px;
 }
 
 .searchBarContainer {
@@ -121,7 +123,7 @@
 }
 
 .pumpImage {
-  width: 100%;
+  width: 100vw;
   height: auto;
 }
 
