--- a/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
+++ b/z-fuel-frontend/src/pages/PriceComparison/PriceComparison.module.css
@@ -159,3 +159,18 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.stationName {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  color: #333;
+}
+
+.error {
+  color: #dc3545;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+  text-align: center;
+}
