--- a/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
+++ b/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
@@ -6,8 +6,6 @@
   gap: 30px;
   padding: 40px 50px;
   width: 100vw;
-
-  /* background-color: black; */
 }
 
 .rightSection {
@@ -17,8 +15,6 @@
   width: 40%;
   object-fit: contain;
   overflow: hidden;
-
-  /* background-color: pink; */
 }
 
 .leftSection {
@@ -26,12 +22,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: start;
-  /* gap: 20px; */
   padding-inline: 20px;
   height: 100%;
   width: 60%;
-
-  /* background-color: pink; */
 }
 
 .titles {
@@ -82,11 +75,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-
-  /* gap: 20px; */
-  /* padding-inline: 30px; */
-
-  /* background-color: black; */
 }
 
 .categoryCard {
@@ -113,17 +101,13 @@
 }
 
 .imageControlContainer {
-  /* width: auto; */
   height: 75%;
-
-  /* background-color: aliceblue; */
 }
 
 .categoryImage,
 .productImage {
   width: 100%;
   height: 100%;
-  /* overflow: hidden; */
 }
 
 /* -------------------------- section 3 - Products ------------------------------ */
@@ -132,7 +116,6 @@
   display: flex;
   flex-direction: column;
   padding: 20px 70px;
-  /* background-color: pink; */
 }
 
 .productsList {
@@ -152,9 +135,14 @@
   border-radius: 30px;
   padding: 20px;
   color: #1e196b;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
-
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
   background-color: #dedada;
+}
+
+.productCard:hover {
+  background-color: #fef9f5;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 /* ------------------------------------------------------------------- */
@@ -171,7 +159,7 @@
     border-radius: 30px;
     padding: 20px;
     color: #1e196b;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
 
     background-color: #dedada;
   }
@@ -188,8 +176,7 @@
     border-radius: 30px;
     padding: 20px;
     color: #1e196b;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
-
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
     background-color: #dedada;
   }
 }
@@ -202,8 +189,6 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 40px 5px;
-
-    /* background-color: black; */
   }
 
   .orderOnlineDefaultImg {
@@ -217,11 +202,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-
     gap: 20px;
-    /* padding-inline: 30px; */
-
-    /* background-color: black; */
   }
 
   .categoryCard {
@@ -234,19 +215,14 @@
     border-radius: 30px;
     padding: 20px;
     color: #1e196b;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
 
     background-color: #dedada;
   }
 
   .productsContainer {
     padding: 0;
-    /* background-color: pink; */
   }
-
-  /* .titles {
-    padding-inline: 40px;
-  } */
 
   .orderContainer {
     display: flex;
@@ -268,11 +244,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: start;
-    /* gap: 20px; */
     padding-inline: 10px;
     height: 100%;
     width: 60%;
-
-    /* background-color: pink; */
   }
 }
