--- a/z-fuel-frontend/src/pages/Homepage/Homepage.module.css
+++ b/z-fuel-frontend/src/pages/Homepage/Homepage.module.css
@@ -1,6 +1,7 @@
 .homepageImageContainer {
   width: 100vw;
   margin-block: 20px;
+  background-color: white;
 }
 
 .homepageImage {
@@ -41,6 +42,7 @@
   flex-direction: column;
   width: 50%;
   padding: 10px;
+  background-color: white;
 }
 
 .serviceDetailsContainerFlipped {
@@ -88,6 +90,7 @@
   object-fit: contain;
   align-items: center;
   border-radius: 30px;
+  background-color: white;
 }
 
 .serviceImg {
