--- a/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
+++ b/z-fuel-frontend/src/pages/OrderOnline/OrderOnline.module.css
@@ -6,6 +6,7 @@
   gap: 30px;
   padding: 40px 50px;
   width: 100vw;
+  background-color: white;
 }
 
 .rightSection {
@@ -15,6 +16,7 @@
   width: 40%;
   object-fit: contain;
   overflow: hidden;
+  background-color: white;
 }
 
 .leftSection {
@@ -25,6 +27,7 @@
   padding-inline: 20px;
   height: 100%;
   width: 60%;
+  background-color: white;
 }
 
 .titles {
@@ -66,6 +69,7 @@
   padding: 40px 70px;
   width: 100vw;
   height: auto;
+  background-color: white;
 }
 
 .categoriesContainer {
@@ -75,6 +79,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  background-color: white;
 }
 
 .categoryCard {
@@ -116,6 +121,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px 70px;
+  background-color: white;
 }
 
 .productsList {
@@ -123,6 +129,7 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 40px;
   padding: 60px;
+  background-color: white;
 }
 
 .productCard {
@@ -233,6 +240,7 @@
     padding: 40px 30px;
     width: 100vw;
     height: auto;
+    background-color: white;
   }
 
   .productsContainer h3 {
